force-app/main/default/objects/PineLabs_API_Config__c/PineLabs_API_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PineLabs API Config</label>
</CustomObject>