force-app/main/default/objects/PineLabs_API_Config__c/fields/Payment_Status_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Endpoint_URL__c</fullName>
    <label>Payment Status Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>