force-app/main/default/objects/PineLabs_API_Config__c/fields/Upload_Txn_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Upload_Txn_Endpoint_URL__c</fullName>
    <label>Upload Txn Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>